--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "sycous2.0",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://green-meadow-0b6c10003.azurestaticapps.net",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
